SEO 优化：Open Graph、Twitter Card、JSON-LD 结构化数据、robots.txt、sitemap.xml、动态页面标题

--- a/index.html
+++ b/index.html
@@ -10,19 +10,74 @@
     gtag('js', new Date());
     gtag('config', 'G-5CVBDFXFW0');
   </script>
+
+  <!-- Basic Meta -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QFAITool - 常用工具集</title>
-  <meta name="description" content="QFAITool 在线常用工具集，提供域名转换、文本处理等实用工具。" />
-  <meta name="keywords" content="在线工具,域名转换,常用工具,开发者工具" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+  <!-- SEO Meta -->
+  <title>QFAITool - 在线常用工具集 | Online Toolbox</title>
+  <meta name="description"
+    content="QFAITool 在线常用工具集，提供域名转换、文本处理等实用工具。简洁高效，免费使用。Free online toolbox for domain conversion and more." />
+  <meta name="keywords" content="在线工具,域名转换,根域名提取,常用工具,开发者工具,online tools,domain converter,root domain extractor" />
+  <meta name="author" content="QFAITool" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://qfaitool.com/" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="QFAITool" />
+  <meta property="og:title" content="QFAITool - 在线常用工具集" />
+  <meta property="og:description" content="简洁好用的在线工具集，提供域名转换、文本处理等实用工具。免费使用，提升工作效率。" />
+  <meta property="og:url" content="https://qfaitool.com/" />
+  <meta property="og:locale" content="zh_CN" />
+  <meta property="og:locale:alternate" content="zh_TW" />
+  <meta property="og:locale:alternate" content="en_US" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="QFAITool - 在线常用工具集" />
+  <meta name="twitter:description" content="简洁好用的在线工具集，提供域名转换、文本处理等实用工具。" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "QFAITool",
+    "alternateName": "QFAITool 在线工具集",
+    "url": "https://qfaitool.com/",
+    "description": "在线常用工具集，提供域名转换、文本处理等实用工具",
+    "inLanguage": ["zh-CN", "zh-TW", "en"],
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://qfaitool.com/#/{search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+
+  <!-- Favicon -->
   <link rel="icon" type="image/svg+xml"
     href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🛠️</text></svg>" />
 </head>
 
 <body>
+  <!-- SEO: 为搜索引擎爬虫提供可见内容（SPA 兜底） -->
+  <noscript>
+    <h1>QFAITool - 在线常用工具集</h1>
+    <p>QFAITool 提供多种在线工具，包括多级域名转一级域名等。请启用 JavaScript 以获取完整体验。</p>
+    <ul>
+      <li><a href="https://qfaitool.com/#/domain-converter">多级域名转一级域名</a></li>
+    </ul>
+  </noscript>
+
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
